--- a/.github/workflows/main_credibancoprod.yml
+++ b/.github/workflows/main_credibancoprod.yml
@@ -22,7 +22,7 @@ jobs:
           java-version: '21'
 
       - name: Build with Maven
-        run: .\mvnw.cmd clean install
+        run: mvn clean install
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
@@ -48,9 +48,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_C5AE256FBF1F45CCA095A29BFB4EA4B5 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_2F0D63271C8348939052017EC793A7C0 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_D614A1FBB3864AAAA252AADC1B2707AF }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_DC30301BBCA14E1DA8C9B1C99361CA98 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_1CC0B8425FC6419084337A92C999C68E }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_335D50C765FD47AB977823208D8CF132 }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
