cambio bd cloud

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=credibanco
-spring.datasource.url=jdbc:mysql://sql3.freesqldatabase.com:3306/sql3694585
+spring.datasource.url=jdbc:mysql://sql10.freesqldatabase.com:3306/sql10697640
 
-spring.datasource.username=sql3694585
-spring.datasource.password=ec2K3UgDxj
+spring.datasource.username=sql10697640
+spring.datasource.password=GssM9pqK1w
 spring.jpa.hibernate.ddl-auto=update
